<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="note"
            type="com.task.noteapp.data.model.Note" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:context=".editnote.EditNoteFragment">

            <EditText
                android:importantForAutofill="no"
                android:id="@+id/title_field"
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/title"
                android:inputType="textCapSentences"
                android:textSize="30sp"
                android:text="@{note.title}"
                android:background="@android:color/transparent"
                android:layout_height="60dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/title_field"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/image_url_input_layout"
                app:layout_constraintTop_toBottomOf="@id/title_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:startIconDrawable="@drawable/ic_link"
                android:hint="@string/image_link">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{note.imageUrl}"
                    android:textSize="20sp"
                    android:id="@+id/image_url_input"
                    android:textColorHint="@color/hint_white"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <EditText
                android:id="@+id/desc_field"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:text="@{note.description}"
                android:layout_marginBottom="20dp"
                android:gravity="start|top"
                app:layout_constraintTop_toBottomOf="@id/image_url_input_layout"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:textSize="20sp"
                android:inputType="textMultiLine|textCapSentences"
                android:singleLine="false"
                android:textColorHint="@color/hint_white"
                android:hint="@string/note_description"
                android:background="@android:color/transparent"
                android:importantForAutofill="no" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/save_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_save"
                app:maxImageSize="30dp"
                app:fabSize="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="16dp"
                android:contentDescription="@string/save_note" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>