<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.task.noteapp.notedetails.NoteDetailsViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".notedetails.NoteDetailsFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/detail_image"
                    app:imageUrl="@{viewModel.note.imageUrl}"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/note_image" />

                <TextView
                    android:id="@+id/detail_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{viewModel.note.title}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintTop_toBottomOf="@id/detail_image"
                    tools:text="The title of Titles" />


                <TextView
                    android:id="@+id/detail_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:text="@{viewModel.note.description}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintTop_toBottomOf="@id/detail_title"
                    tools:text="@string/detail_description" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/detail_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="30dp"
                    android:id="@+id/modified_date"
                    android:textSize="12sp"
                    tools:text="Last Modified: 3/03/2021 4:32 PM"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/modified_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="6dp"
                    android:id="@+id/created_date"
                    android:textSize="12sp"
                    tools:text="Created: 3/03/2021"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:contentDescription="@string/edit_note"
            android:src="@drawable/ic_edit"
            android:visibility="gone"
            app:fabSize="normal"
            app:maxImageSize="30dp" />
    </FrameLayout>
</layout>
